--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="col-12 col-sm-12" >
                     <nav class="navbar navbar-expand-lg bg-body-tertiary diplay d-block d-sm-none">
                         <div class="container-fluid">
-                          <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="" class="logo"></a>
+                          <a class="navbar-brand" href="#"><img src="./img/logo (1).png" alt=""></a>
                           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                             <span class="navbar-toggler-icon"></span>
                           </button>
@@ -337,7 +337,7 @@
                   <p class="oboi">Виниловые обои</p>
                   <p class="oboi">Дизайнерские обои</p>
                 </div>
-                <div class="col-12 col-sm-2">
+                <div class="col-12 col-sm-3">
                     <p class="kotolog">Наши услуги</p>
                     <p class="oboi">Создание уникального дизайна <br> в квартире, доме, офисе</p>
                     <p class="oboi">Оформление офисов и коммерческих <br> помещений в фирменном стиле</p>
